--- a/.env
+++ b/.env
@@ -4,17 +4,18 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
-NEXTAUTH_SECRET=
+DATABASE_URL="mongodb+srv://raunak:raunak@cluster0.ccbrpzc.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
-NEXT_PUBLIC_PUSHER_APP_KEY=
-PUSHER_APP_ID=
-PUSHER_SECRET=
+NEXT_PUBLIC_PUSHER_APP_KEY=3c446aa55c4493f88ce1
+PUSHER_APP_ID=1684426
+PUSHER_SECRET=eaf754833bdb9739c0f1
+PUSHER_APP_CLUSTER=ap2
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dui9qrubq
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=d8d44be866f4d4666fee
+GITHUB_SECRET=3d8b100c4e4c856a25fde3198b92e07ad3e6f24d
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=877003586054-nc6jut99ols13becqeg4v48m9gknsien.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
