--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.13",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
+    "@pusher/pusher-websocket-react-native": "^1.2.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -47,7 +48,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
-    "@types/lodash": "^4.14.194",
+    "@types/lodash": "^4.14.199",
     "prisma": "^4.13.0"
   }
 }
